--- a/packages/client-app/package.json
+++ b/packages/client-app/package.json
@@ -31,7 +31,7 @@
     "coffeestack": "^1.1",
     "color": "^0.7.3",
     "debug": "github:emorikawa/debug#nylas",
-    "electron": "1.4.15",
+    "electron": "1.7.3",
     "electron-spellchecker": "1.0.1",
     "emissary": "^1.3.1",
     "emoji-data": "^0.2.0",
@@ -86,11 +86,11 @@
     "proxyquire": "1.3.1",
     "q": "^1.0.1",
     "raven": "1.1.4",
-    "react": "15.4.2",
-    "react-addons-css-transition-group": "15.4.2",
-    "react-addons-perf": "15.4.2",
-    "react-addons-test-utils": "15.4.2",
-    "react-dom": "15.4.2",
+    "react": "15.6.0",
+    "react-addons-css-transition-group": "15.6.0",
+    "react-addons-perf": "15.6.0-rc.1",
+    "react-addons-test-utils": "15.6.0",
+    "react-dom": "15.6.0",
     "reflux": "0.1.13",
     "request": "2.79.x",
     "request-progress": "^0.3",
