--- a/packages/client-app/package.json
+++ b/packages/client-app/package.json
@@ -13,13 +13,11 @@
     "url": "https://github.com/nylas/nylas-mail/issues"
   },
   "dependencies": {
-    "analytics-node": "2.x.x",
     "async": "^0.9",
     "babel-core": "6.22.0",
     "babel-preset-electron": "1.4.15",
     "babel-preset-react": "6.22.0",
     "babel-regenerator-runtime": "6.5.0",
-    "base64-stream": "0.1.3",
     "better-sqlite3": "bengotow/better-sqlite3#a888061ad334c76d2db4c06554c90785cc6e7cce",
     "bluebird": "3.4.x",
     "chromium-net-errors": "1.0.3",
@@ -37,32 +35,18 @@
     "emoji-data": "^0.2.0",
     "encoding": "0.1.12",
     "enzyme": "2.7.1",
-    "esdoc": "^0.5.2",
-    "esdoc-es7-plugin": "0.0.3",
     "event-kit": "^1.0.2",
     "fs-plus": "^2.3.2",
-    "getmac": "1.x.x",
-    "googleapis": "9.0.0",
-    "guid": "0.0.10",
-    "hapi": "16.1.0",
-    "hapi-auth-basic": "^4.2.0",
-    "hapi-boom-decorators": "2.2.2",
-    "hapi-plugin-websocket": "^0.9.2",
-    "hapi-swagger": "7.6.0",
     "he": "1.1.0",
-    "iconv": "2.2.1",
     "immutable": "3.7.5",
-    "inert": "4.0.0",
     "is-online": "6.1.0",
-    "isomorphic-core": "0.x.x",
+    "imap-provider-settings": "github:nylas/imap-provider-settings#2fdcd34d59b",
     "jasmine-json": "~0.0",
     "jasmine-react-helpers": "^0.2",
     "jasmine-reporters": "1.x.x",
     "jasmine-tagged": "^1.1.2",
     "joi": "8.4.2",
-    "jsx-transform": "^2.3.0",
     "juice": "^1.4",
-    "kbpgp": "^2.0.52",
     "keytar": "3.0.0",
     "less-cache": "0.21",
     "lru-cache": "^4.0.1",
@@ -73,16 +57,13 @@
     "moment-round": "^1.0.1",
     "moment-timezone": "0.5.4",
     "mousetrap": "^1.5.3",
-    "nock": "^2",
     "node-emoji": "^1.2.1",
     "node-uuid": "^1.4",
     "nslog": "^3",
     "optimist": "0.4.0",
-    "papaparse": "^4.1.2",
     "pathwatcher": "~6.2",
     "pick-react-known-prop": "0.x.x",
     "promise-queue": "2.1.1",
-    "property-accessors": "^1",
     "proxyquire": "1.3.1",
     "q": "^1.0.1",
     "raven": "1.1.4",
@@ -99,9 +80,7 @@
     "rx-lite": "4.0.8",
     "rx-lite-testing": "^4.0.7",
     "sanitize-html": "1.9.0",
-    "season": "^5.1",
     "semver": "^4.2",
-    "sequelize": "nylas/sequelize#nylas-3.40.0",
     "simplemde": "jstejada/simplemde-markdown-editor#input-style-support",
     "source-map-support": "^0.3.2",
     "sqlite3": "https://github.com/bengotow/node-sqlite3/archive/bengotow/usleep-v3.1.4.tar.gz",
@@ -109,11 +88,12 @@
     "tld": "^0.0.2",
     "underscore": "1.8.x",
     "underscore.string": "^3.0",
-    "vision": "4.1.0",
     "windows-shortcuts": "emorikawa/windows-shortcuts#b0a0fc7"
   },
   "devDependencies": {
     "donna": "^1.0.15",
+    "esdoc": "^0.5.2",
+    "esdoc-es7-plugin": "0.0.3",
     "gitbook": "^3.2.2",
     "gitbook-cli": "^2.3.0",
     "gitbook-plugin-anchors": "^0.7.1",
