--- a/packages/client-app/package.json
+++ b/packages/client-app/package.json
@@ -34,7 +34,7 @@
     "emissary": "^1.3.1",
     "emoji-data": "^0.2.0",
     "encoding": "0.1.12",
-    "enzyme": "2.7.1",
+    "enzyme": "2.9.1",
     "event-kit": "^1.0.2",
     "fs-plus": "^2.3.2",
     "he": "1.1.0",
@@ -67,11 +67,11 @@
     "proxyquire": "1.3.1",
     "q": "^1.0.1",
     "raven": "1.1.4",
-    "react": "15.6.0",
-    "react-addons-css-transition-group": "15.6.0",
-    "react-addons-perf": "15.6.0-rc.1",
-    "react-addons-test-utils": "15.6.0",
-    "react-dom": "15.6.0",
+    "react": "15.6.1",
+    "react-addons-css-transition-group": "15.6.1",
+    "react-addons-perf": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-test-renderer": "15.6.1",
     "reflux": "0.1.13",
     "request": "2.79.x",
     "request-progress": "^0.3",
