Clean up more package crap - `is-online` requiring 1MB of JSON

--- a/packages/client-app/package.json
+++ b/packages/client-app/package.json
@@ -18,11 +18,10 @@
     "babel-preset-electron": "1.4.15",
     "babel-preset-react": "6.22.0",
     "babel-regenerator-runtime": "6.5.0",
-    "better-sqlite3": "bengotow/better-sqlite3#a888061ad334c76d2db4c06554c90785cc6e7cce",
+    "better-sqlite3": "bengotow/better-sqlite3#dcd5b6e73c9a5329fd72c85be3316131fcfb83ab",
     "chromium-net-errors": "1.0.3",
     "chrono-node": "^1.1.2",
     "classnames": "1.2.1",
-    "clearbit": "^1.2",
     "coffee-react": "^5.0.0",
     "coffee-script": "1.10.0",
     "coffeestack": "^1.1",
@@ -38,19 +37,17 @@
     "fs-plus": "^2.3.2",
     "he": "1.1.0",
     "immutable": "3.7.5",
-    "is-online": "6.1.0",
+    "is-online": "7.0.0",
     "imap-provider-settings": "github:nylas/imap-provider-settings#2fdcd34d59b",
     "jasmine-json": "~0.0",
     "jasmine-react-helpers": "^0.2",
     "jasmine-reporters": "1.x.x",
     "jasmine-tagged": "^1.1.2",
-    "joi": "8.4.2",
     "juice": "^1.4",
     "keytar": "3.0.0",
     "less-cache": "0.21",
     "lru-cache": "^4.0.1",
     "marked": "^0.3",
-    "mimelib": "0.2.19",
     "mkdirp": "^0.5",
     "moment": "2.12.0",
     "moment-round": "^1.0.1",
@@ -65,8 +62,8 @@
     "proxyquire": "1.3.1",
     "raven": "1.1.4",
     "react": "15.6.1",
-    "react-addons-css-transition-group": "15.6.1",
-    "react-addons-perf": "15.6.1",
+    "react-addons-css-transition-group": "15.6.0",
+    "react-addons-perf": "15.6.0-rc.1",
     "react-dom": "15.6.1",
     "react-test-renderer": "15.6.1",
     "reflux": "0.1.13",
