Rewrite the package manager to load fewer packages faster at window init time

--- a/packages/client-app/internal_packages/account-sidebar/package.json
+++ b/packages/client-app/internal_packages/account-sidebar/package.json
@@ -5,6 +5,7 @@
   "description": "Sidebar view that shows your account and important tags",
   "license": "GPL-3.0",
   "private": true,
+  "syncInit": true,
   "engines": {
     "nylas": "*"
   }
