--- a/packages/client-app/package.json
+++ b/packages/client-app/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "async": "^0.9",
     "babel-core": "6.22.0",
-    "babel-preset-electron": "1.4.15",
+    "babel-preset-electron": "bengotow/babel-preset-electron#00783dfc438f122997993ae597a41ec315ba121b",
     "babel-preset-react": "6.22.0",
     "babel-regenerator-runtime": "6.5.0",
     "better-sqlite3": "bengotow/better-sqlite3#dcd5b6e73c9a5329fd72c85be3316131fcfb83ab",
