Fold EdgehillAPI, LegacyEdgehillAPI, NylasAPI together

--- a/packages/client-app/package.json
+++ b/packages/client-app/package.json
@@ -35,9 +35,10 @@
     "enzyme": "2.9.1",
     "event-kit": "^1.0.2",
     "fs-plus": "^2.3.2",
+    "getmac": "^1.2.1",
     "he": "1.1.0",
-    "is-online": "7.0.0",
     "imap-provider-settings": "github:nylas/imap-provider-settings#2fdcd34d59b",
+    "is-online": "7.0.0",
     "jasmine-json": "~0.0",
     "jasmine-react-helpers": "^0.2",
     "jasmine-reporters": "1.x.x",
