--- a/package.json
+++ b/package.json
@@ -42,24 +42,14 @@
     "underscore": "1.8.x"
   },
   "scripts": {
-    "start": "npm run client",
-    "test": "npm run test-client && npm run test-cloud",
-    "client": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --dev",
-    "benchmark": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --dev --benchmark",
-    "test-client": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --test",
-    "test-client-window": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --test=window",
-    "test-client-junit": "",
-    "lint-client": "grunt lint --gruntfile=packages/client-app/build/Gruntfile.js --base=./",
-    "build-client": "grunt build-client --gruntfile=packages/client-app/build/Gruntfile.js --base=./",
-    "upload-client": "grunt upload-client --gruntfile=packages/client-app/build/Gruntfile.js --base=./",
-    "cloud": "pm2 stop all; pm2 delete all; pm2 start packages/cloud-core/pm2-dev.yml --no-daemon",
-    "cloud-debug": "pm2 stop all; pm2 delete all; pm2 start packages/cloud-core/pm2-debug-cloud-api.yml --no-daemon",
-    "test-cloud": "cd packages/cloud-api && npm test && cd ../cloud-core && npm test && cd ../cloud-workers && npm test",
-    "stop": "npm run stop-cloud",
-    "stop-cloud": "pm2 stop all; pm2 delete all;",
-    "build-cloud": "docker build .",
-    "postinstall": "node scripts/postinstall.js",
-    "daily": "node scripts/daily.js"
+    "start": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --dev",
+    "test": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --test",
+    "test-window": "packages/client-app/node_modules/.bin/electron packages/client-app --enable-logging --test=window",
+    "test-junit": "",
+    "lint": "grunt lint --gruntfile=packages/client-app/build/Gruntfile.js --base=./",
+    "build": "grunt build-client --gruntfile=packages/client-app/build/Gruntfile.js --base=./",
+    "upload": "grunt upload-client --gruntfile=packages/client-app/build/Gruntfile.js --base=./",
+    "postinstall": "node scripts/postinstall.js"
   },
   "repository": {
     "type": "git",
