Encrypt and commit Mac build secrets

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ node_modules
 **/lerna-debug.log*
 
 ##### Certs for building
+certs
+**/*.p12
+**/*.cer
 **/build/resources/certs
 
 ##### Misc swap files
