Change a few key build files to use Merani name

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nylas-mail",
-  "productName": "Nylas Mail",
+  "name": "merani",
+  "productName": "Merani",
   "version": "2.0.15",
   "description": "The best email app for people and teams at work",
   "license": "GPL-3.0",
