--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ install:
 
 build_script:
 - cmd: npm install && npm run build
-- ps: node app/build/create-signed-windows-installer.js
+- cmd: node app/build/create-signed-windows-installer.js
 
 artifacts:
 - path: dist/merani-win32-ia32/MeraniSetup.exe
