On MacOS, upload mailsync dYSM file as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
     permissions: public-read
     paths:
     - mailsync
+    - mailsync.dSYM.zip
     - Merani.dmg
     - Merani.zip
     - $(find . -type f -name *.deb | tr "\n" ":")
