Silence warnings, re-implement update channel / newsletter endpoints

--- a/app/internal_packages/thread-search/package.json
+++ b/app/internal_packages/thread-search/package.json
@@ -5,6 +5,7 @@
   "description": "Search for threads",
   "license": "GPL-3.0",
   "private": true,
+  "syncInit": true,
   "engines": {
     "nylas": "*"
   }
