Replace references to Nylas in many places

--- a/app/internal_packages/ui-darkside/package.json
+++ b/app/internal_packages/ui-darkside/package.json
@@ -3,7 +3,7 @@
   "displayName": "Darkside",
   "theme": "ui",
   "version": "1.0.0",
-  "description": "A customizable, dark sidebar theme for Nylas Mail.",
+  "description": "A customizable, dark sidebar theme for Merani.",
   "license": "MIT",
   "engines": {
     "nylas": "*"
