--- a/app/internal_packages/ui-taiga/package.json
+++ b/app/internal_packages/ui-taiga/package.json
@@ -3,7 +3,7 @@
   "displayName": "Taiga",
   "theme": "ui",
   "version": "0.2.8",
-  "description": "A clean, Mailbox-inspired theme for Nylas Mail.",
+  "description": "A clean, Mailbox-inspired theme for Merani.",
   "license": "GPL-3.0",
   "engines": {
     "nylas": "*"
