--- a/app/internal_packages/thread-snooze/package.json
+++ b/app/internal_packages/thread-snooze/package.json
@@ -12,7 +12,7 @@
     "url": "github.com/nylas/nylas-mail"
   },
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "license": "GPL-3.0"
 }
