--- a/app/internal_packages/ui-darkside/package.json
+++ b/app/internal_packages/ui-darkside/package.json
@@ -6,7 +6,7 @@
   "description": "A customizable, dark sidebar theme for Merani.",
   "license": "MIT",
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "private": true
 }
