--- a/app/internal_packages/message-list/package.json
+++ b/app/internal_packages/message-list/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "syncInit": true,
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "windowTypes": {
     "default": true,
