--- a/app/internal_packages/remove-tracking-pixels/package.json
+++ b/app/internal_packages/remove-tracking-pixels/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/main",
   "license": "GPL-3.0",
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "windowTypes": {
     "default": true,
