--- a/app/internal_packages/screenshot-mode/package.json
+++ b/app/internal_packages/screenshot-mode/package.json
@@ -6,7 +6,7 @@
   "license": "Proprietary",
   "private": true,
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "windowTypes": {
     "all": true
