--- a/app/internal_packages/send-and-archive/package.json
+++ b/app/internal_packages/send-and-archive/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0",
   "private": true,
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "windowTypes": {
     "default": true,
