--- a/app/internal_packages/ui-dark/package.json
+++ b/app/internal_packages/ui-dark/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0",
   "styleSheets": ["email-frame"],
   "engines": {
-    "nylas": "*"
+    "merani": "*"
   },
   "private": true
 }
