--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "merani",
   "productName": "Merani",
   "version": "2.0.15",
+  "commitHash": "COMMIT_INSERTED_DURING_PACKAGING",
   "description": "The best email app for people and teams at work",
   "license": "GPL-3.0",
   "main": "./src/browser/main.js",
