--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ before_install:
   git submodule update --init mailsync
 
 script:
+- npm run ci-setup-mac-keychain
 - mailsync/build.sh
 - mv ./mailsync ./mailsync-src
 - DEBUG=electron-packager,electron-osx-sign npm run build
