--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "^2.9.0",
     "devtron": "^1.4.0",
     "donna": "^1.0.16",
+    "electron": "1.7.3",
     "electron-installer-dmg": "0.2.x",
     "electron-packager": "8.7.x",
     "electron-winstaller": "2.x.x",
@@ -63,10 +64,10 @@
   },
   "scripts": {
     "postinstall": "node scripts/postinstall.js",
-    "start": "app/node_modules/.bin/electron ./app --enable-logging --dev",
+    "start": "node_modules/.bin/electron ./app --enable-logging --dev",
     "lint": "grunt lint --gruntfile=app/build/Gruntfile.js --base=./",
-    "test": "app/node_modules/.bin/electron ./app --enable-logging --test",
-    "test-window": "app/node_modules/.bin/electron ./app --enable-logging --test=window",
+    "test": "node_modules/.bin/electron ./app --enable-logging --test",
+    "test-window": "node_modules/.bin/electron ./app --enable-logging --test=window",
     "build": "grunt build-client --gruntfile=app/build/Gruntfile.js --base=./",
     "build-docs": "grunt docs --gruntfile=app/build/Gruntfile.js --base=./ && mkdir -p app/dist-docs && cp README.md ./app/build/docs_src/README.md && gitbook --gitbook=latest build . ./app/dist-docs --log=debug --debug && rm ./app/build/docs_src/README.md && rm -rf ./app/build/docs_src/classes",
     "ci-setup-mac-keychain": "grunt setup-mac-keychain --gruntfile=app/build/Gruntfile.js --base=./"
