--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,22 +9,23 @@ branches:
 init:
 - ps: $env:commit = $env:appveyor_repo_commit.SubString(0,8)
 
-# We need to only clone the main module because our submodule requires the
-# encrypted ssh key to access submodules
 install:
 - ps: Install-Product node $env:NODE_VERSION
-- ps: nuget install secure-file -ExcludeVersion
 - ps: npm config set msvs_version 2013
 
-# We need to extract the encrypted private ssh key to clone the submodule.
+# Extract the codesigning certs, encrypted private ssh key
 - ps: |
-    if ($env:DECRYPTION_PASSWORD) {
-      secure-file\tools\secure-file -decrypt app\build\resources\certs\appveyor\win-nylas-n1.p12.enc -secret $env:DECRYPTION_PASSWORD
-      secure-file\tools\secure-file -decrypt app\build\resources\certs\appveyor\set_win_env.ps1.enc -secret $env:DECRYPTION_PASSWORD
-      . app\build\resources\certs\appveyor\set_win_env.ps1
-    }
+    C:\OpenSSL-Win32\bin\openssl.exe -K $encrypted_faf2708e46e2_key -iv $encrypted_faf2708e46e2_iv -in app/build/resources/certs.tar.enc -out app/build/resources/certs.tar -d;
+    mkdir app/build/resources/certs;
+    tar xvf app/build/resources/certs.tar --directory=app/build/resources/;
+
+# Clone the submodule
+- ps: |
+    $env:GIT_SSH_COMMAND="ssh -i app/build/resources/certs/mailsync-deploy-key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no";
+    git submodule update --init mailsync
 
 build_script:
+- cmd: cd .\mailsync && .\build.cmd && cd ..\
 - cmd: npm install && npm run build
 - cmd: node app/build/create-signed-windows-installer.js
 
