--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,7 +15,7 @@ install:
 
 # Extract the codesigning certs, encrypted private ssh key
 - ps: |
-    C:\OpenSSL-Win32\bin\openssl.exe -K $encrypted_faf2708e46e2_key -iv $encrypted_faf2708e46e2_iv -in app/build/resources/certs.tar.enc -out app/build/resources/certs.tar -d;
+    C:\OpenSSL-Win32\bin\openssl.exe aes-256-cbc -K $encrypted_faf2708e46e2_key -iv $encrypted_faf2708e46e2_iv -in app/build/resources/certs.tar.enc -out app/build/resources/certs.tar -d;
     mkdir app/build/resources/certs;
     tar xvf app/build/resources/certs.tar --directory=app/build/resources/;
 
@@ -51,8 +51,10 @@ environment:
   global:
     SIGN_BUILD: true
     CERTIFICATE_FILE: .\app\build\resources\certs\appveyor\win-nylas-n1.p12
-    DECRYPTION_PASSWORD:
-      secure: 48VSzDtdBd52Xlo3TZ1NeR1yRRrZ3AU6Px5XjD5RDp44cFU5GYVspecGqX6DGCV7i0D7nldGMyEbXNrjM1t1Kw==
+    encrypted_faf2708e46e2_key:
+      secure: mdegN/AldrADhtEop6mDwq6d4jUskzijK2X7Twf2lj9t3jdaW4OtMuJ5Ywyt+GN/N7qMFr7LOvxQ5gz4aoIW+Dg9d03AX3BH1o4BI6g+wdk=
+    encrypted_faf2708e46e2_iv:
+      secure: B2pwd1AlmQHjIpIau1NylfEMkwJJ5u7NhxgZcU8WicwP6+cmePnAacYIwpe1fXEf
 
 cache:
   - node_modules -> package.json
