--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,8 +21,8 @@ install:
 
 # Clone the submodule
 - ps: |
-    $env:GIT_SSH_COMMAND="ssh -i app/build/resources/certs/mailsync-deploy-key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no";
-    git submodule update --init mailsync 2>&1
+    $env:GIT_SSH_COMMAND="ssh -q -i app/build/resources/certs/mailsync-deploy-key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no";
+    git submodule update --init mailsync --quiet *>$null
 
 build_script:
 - cmd: cd .\mailsync && .\build.cmd && cd ..\
