Make prefs load at launch but lazy-load tabs

--- a/app/internal_packages/preferences/package.json
+++ b/app/internal_packages/preferences/package.json
@@ -4,6 +4,7 @@
   "main": "./lib/main",
   "description": "Nylas Preferences Window Component",
   "license": "GPL-3.0",
+  "syncInit": true,
   "private": true,
   "engines": {
     "merani": "*"
