--- a/app/internal_packages/custom-fonts/package.json
+++ b/app/internal_packages/custom-fonts/package.json
@@ -5,6 +5,7 @@
   "description": "Custom Fonts",
   "license": "Proprietary",
   "private": true,
+  "syncInit": true,
   "windowTypes": {
     "all": true
   },
