Groundwork for handling snooze, send later, etc. locally (metadata expiration)

--- a/app/internal_packages/notifications/package.json
+++ b/app/internal_packages/notifications/package.json
@@ -5,6 +5,7 @@
   "description": "Notifications",
   "license": "GPL-3.0",
   "private": true,
+  "syncInit": true,
   "engines": {
     "mailspring": "*"
   }
