Fix React 15.x warnings in preparation for React 16 sometime soon

--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
     "@segment/loosely-validate-event": "^1.1.2",
     "async": "^0.9",
     "babel-core": "6.22.0",
-    "babel-preset-electron": "bengotow/babel-preset-electron#00783dfc438f122997993ae597a41ec315ba121b",
+    "babel-preset-electron":
+      "bengotow/babel-preset-electron#00783dfc438f122997993ae597a41ec315ba121b",
     "babel-preset-react": "6.22.0",
     "babel-regenerator-runtime": "6.5.0",
     "better-sqlite3": "bengotow/better-sqlite3#dcd5b6e73c9a5329fd72c85be3316131fcfb83ab",
@@ -58,7 +59,6 @@
     "react": "15.6.1",
     "react-addons-css-transition-group": "15.6.0",
     "react-addons-perf": "15.6.0-rc.1",
-    "react-addons-test-utils": "15.6.0",
     "react-dom": "15.6.1",
     "react-test-renderer": "15.6.1",
     "reflux": "0.1.13",
