Expand engine support in package.json to fix mac build

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "git+https://github.com/Foundry376/Mailspring.git"
   },
   "engines": {
-    "node": "6.9.1",
-    "npm": "3.10.8"
+    "node": "6.9.x",
+    "npm": "3.10.x"
   },
   "devDependencies": {
     "babel-cli": "6.x.x",
