--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ before_install:
   git submodule update --init mailsync
 
 before_script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start +extension RANDR; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
 
 script:
 - npm run ci-setup-mac-keychain
